# ary

./: AryConfig.cmake.in  CMakeLists.txt  README.md
api/godot/: CMakeLists.txt  ary.cpp  ary.gdnlib  ary.h  camera.cpp  camera.h  wrapper.c
data/: quadruple_binary.yml  single_binary.yml
demos/: CMakeLists.txt  demo_binary.cpp  demo_keypoints.cpp  demo_scene.cpp  demo_tracking.cpp
include/ary/: binary.h  camera.h  complex.h  keypoints.h  localizer.h  tracker.h  utilities.h
src/: binary.cpp  camera.cpp  complex.cpp  keypoints.cpp  localizer.cpp  tracker.cpp  utilities.cpp
tools/: CMakeLists.txt  evaluate_markers.cpp
