PROJECT(ARy)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(AFTER "${OpenCV_INCLUDE_DIRS}" "include")
LINK_LIBRARIES(${OpenCV_LIBS})

SET(SOURCES src/camera.cpp src/localizer.cpp src/keypoints.cpp src/binary.cpp src/tracker.cpp src/utilities.cpp src/complex.cpp)

ADD_LIBRARY(ary SHARED ${SOURCES})

ADD_LIBRARY(ary_static STATIC ${SOURCES})
SET_PROPERTY(TARGET ary_static PROPERTY POSITION_INDEPENDENT_CODE ON)

ADD_SUBDIRECTORY(demos)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(api/godot)
