PROJECT(ARy)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED core imgproc video features2d calib3d)
INCLUDE_DIRECTORIES(AFTER "${OpenCV_INCLUDE_DIRS}" "include")
LINK_LIBRARIES(${OpenCV_LIBS})

SET(SOURCES src/camera.cpp src/localizer.cpp src/keypoints.cpp src/binary.cpp src/tracker.cpp src/utilities.cpp src/complex.cpp)

ADD_LIBRARY(ary SHARED ${SOURCES})

ADD_LIBRARY(ary_static STATIC ${SOURCES})
SET_PROPERTY(TARGET ary_static PROPERTY POSITION_INDEPENDENT_CODE ON)

option(BUILD_DEMOS "Build ARy demos" OFF)
option(BUILD_TOOLS "Build command line tools" OFF)
option(BUILD_GODOT "Build Godot game engine API" OFF)

IF (BUILD_DEMOS)
ADD_SUBDIRECTORY(demos)
ENDIF (BUILD_DEMOS)

IF (BUILD_TOOLS)
ADD_SUBDIRECTORY(tools)
ENDIF (BUILD_TOOLS)

IF (BUILD_GODOT)
ADD_SUBDIRECTORY(api/godot)
ENDIF (BUILD_GODOT)
